fixing lab1 typo

--- a/labs/Lab1.ipynb
+++ b/labs/Lab1.ipynb
@@ -242,7 +242,9 @@
    "metadata": {},
    "source": [
     "## Task 5\n",
-    "Write a program that prompts the user for the radius and height of a cylinder and determines the volume and surface area of the cylinder. Print the volume value. Volume of a cylinder: \n",
+    "Write a program that prompts the user for the radius and height of a cylinder and determines the volume and surface area of the cylinder. Display the volume and surface area values.\n",
+    "\n",
+    "Volume of a cylinder: \n",
     "\n",
     "$$volume = \\pi \\times radius^{2} \\times height$$ \n",
     "\n",
