--- a/labs/Lab1.ipynb
+++ b/labs/Lab1.ipynb
@@ -39,9 +39,7 @@
     "Once you complete Task 0 and your assigned task with a partner (pair task), you are to continue solving additional lab tasks until the end of lab. You are encouraged to complete *all* of the lab tasks. Practice, practice, practice! \n",
     "\n",
     "#### Completing a Task\n",
-    "When you complete a task, perform the following:\n",
-    "1. Show your TA your code and output.\n",
-    "1. Post in *your [Piazza](http://piazza.com/wsu/fall2016/cpts111/home) lab section group* that you have completed this task. **Do not post your task solution to Piazza unless told to do so by your TA**. When you update Piazza by stating you have completed a task, other students can ask you for help (in person or online, in lab or at home). Helping your peers benefits both you and your classmates, as Albert Einstein said, \"You do not really understand something unless you can explain it to your grandmother.\" :)\n",
+    "When you complete a task, show your TA your code and output. Also, help others with this task either in person or by answering questions in your [Piazza](http://piazza.com/wsu/fall2016/cpts111/home) lab section group. Helping your peers benefits both you and your classmates, as Albert Einstein said, \"You do not really understand something unless you can explain it to your grandmother.\" :)\n",
     "\n",
     "#### Lab Dismissal\n",
     "You are dismissed from lab when your TA dismisses you, or after 3 hours, whichever comes first. Your TA will dismiss you once you have demonstrated mastery of the material (completed a certain number of tasks). Should you demonstrate mastery before the end of lab, you are encouraged to stay and perform a combination of the following:\n",
