--- a/labs/Lab0.ipynb
+++ b/labs/Lab0.ipynb
@@ -11,11 +11,11 @@
     "## Lab0 Environment Setup (0 pts)\n",
     "\n",
     "### Learner Objectives\n",
-    "At the conclusion of this programming assignment, participants should be able to:\n",
+    "At the conclusion of this lab, participants should be able to:\n",
     "* Run a Python program on their own computer\n",
     "\n",
     "### Prerequisites\n",
-    "Before starting this programming assignment, participants should be able to:\n",
+    "Before starting this lab, participants should be able to:\n",
     "* Open a web browser and access the internet\n",
     "* Install programs on their computer\n",
     "\n",
