--- a/labs/Lab1.ipynb
+++ b/labs/Lab1.ipynb
@@ -11,7 +11,7 @@
     "## Lab1 Introduction to Python (10 pts)\n",
     "\n",
     "### Learner Objectives\n",
-    "At the conclusion of this programming assignment, participants should be able to:\n",
+    "At the conclusion of this lab, participants should be able to:\n",
     "* Use the Spyder IDE\n",
     "* Run Python interactively via the IPython shell\n",
     "* Save and run Python programs (scripts)\n",
@@ -21,7 +21,7 @@
     "    * Basic arithmetic\n",
     "\n",
     "### Prerequisites\n",
-    "Before starting this programming assignment, participants should be able to:\n",
+    "Before starting this lab, participants should be able to:\n",
     "* Install Anaconda 3.5 Python distribution\n",
     "* Access Spyder IDE\n",
     "* Apply basic problem solving strategies\n",
@@ -357,6 +357,18 @@
     "Please enter the time elapsed (in seconds) between the flash and sound of thunder: 30\n",
     "The lightning strike is 6.25 miles away.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 11\n",
+    "Write a program that prompts the user for inputs into the third order polynomial equation provided and determines the y value. Print the y value. The third order polynomial equation is: \n",
+    "\n",
+    "$$y = 3a \\times x^3 + (1/4) \\times b \\times x^2 + 10 \\times c \\times x + -5 \\times d$$\n",
+    "\n",
+    "where x, y, a, b, c, and d are integer numbers."
    ]
   }
  ],
