--- a/labs/Lab2.ipynb
+++ b/labs/Lab2.ipynb
@@ -11,12 +11,12 @@
     "## Lab2 Arithmetic (10 pts)\n",
     "\n",
     "### Learner Objectives\n",
-    "At the conclusion of this programming assignment, participants should be able to:\n",
+    "At the conclusion of this lab, participants should be able to:\n",
     "* Solve basic arithmetic problems in Python\n",
     "* Perform integer division and modulus arithmetic\n",
     "\n",
     "### Prerequisites\n",
-    "Before starting this programming assignment, participants should be able to:\n",
+    "Before starting this lab, participants should be able to:\n",
     "* Use the Spyder IDE\n",
     "* Run Python interactively via the IPython shell\n",
     "* Save and run Python programs (scripts)\n",
