--- a/lessons/L4-1.ipynb
+++ b/lessons/L4-1.ipynb
@@ -288,12 +288,14 @@
    "metadata": {},
    "source": [
     "## Program Execution Revisited\n",
-    "* Functions need to be defined *above* any code that calls the function.\n",
+    "* Python exececutes code from top to bottom; however, read a program based on it's execution *flow*, not necessarily from top to bottom.\n",
     "* Function definitions do not alter the flow of program execution.\n",
-    "* Statements in a function definition are not executed until  the function is *called*.\n",
-    "* When a function finishes executing, the next C statement after the function call is executed.\n",
-    "* Functions can call other functions!\n",
-    "* Read a program based on it's execution *flow*, not necessarily from top to bottom."
+    "    * When Python encounters a function definition, it notes the existence of the function, but does not execute the function\n",
+    "* Statements in a function definition are not executed until the function is *called*. \n",
+    "    * Calling a function alters the top to bottom flow of program execution\n",
+    "* Functions need to be defined *above* any code that calls the function.\n",
+    "* When a function finishes executing, the next Python statement after the function call is executed.\n",
+    "* Functions can call other functions!"
    ]
   },
   {
@@ -311,9 +313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -325,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
