--- a/lessons/L4-1.ipynb
+++ b/lessons/L4-1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -209,6 +209,13 @@
     "    '''\n",
     "    weighted_credits = (num_credits1 * gpa1) + (num_credits2 * gpa2) + (num_credits3 * gpa3)\n",
     "    return weighted_credits\n",
+    "\n",
+    "def sum_credits(credits1, credits2, credits3):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    total_credits = credits1 + credits2 + credits3\n",
+    "    return total_credits\n",
     "\n",
     "def compute_gpa(weighted_credits, total_num_credits):\n",
     "    '''\n",
@@ -248,14 +255,14 @@
       "Please enter the number of credits for computer science: \n",
       "4\n",
       "Please enter the gpa for math: \n",
-      "3.3\n",
+      "3.5\n",
       "Please enter the number of credits for math: \n",
       "3\n",
       "Please enter the gpa for karate: \n",
       "4.0\n",
       "Please enter the number of credits for karate: \n",
       "1\n",
-      "Your GPA is: 3.74\n"
+      "Your GPA is: 3.81\n"
      ]
     }
    ],
@@ -274,7 +281,7 @@
     "weighted_credits = compute_weighted_credits(gpa1, gpa2, gpa3, num_credits1, num_credits2, num_credits3)\n",
     "\n",
     "# compute the total number of credits earned\n",
-    "total_num_credits = num_credits1 + num_credits2 + num_credits3\n",
+    "total_num_credits = sum_credits(num_credits1, num_credits2, num_credits3)\n",
     "\n",
     "# copute the average of the grade points\n",
     "gpa = compute_gpa(weighted_credits, total_num_credits)\n",
@@ -287,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Program Execution Revisited\n",
+    "#### Program Execution Revisited\n",
     "* Python exececutes code from top to bottom; however, read a program based on it's execution *flow*, not necessarily from top to bottom.\n",
     "* Function definitions do not alter the flow of program execution.\n",
     "    * When Python encounters a function definition, it notes the existence of the function, but does not execute the function\n",
