--- a/lessons/L4-1.ipynb
+++ b/lessons/L4-1.ipynb
@@ -295,7 +295,7 @@
    "metadata": {},
    "source": [
     "#### Program Execution Revisited\n",
-    "* Python exececutes code from top to bottom; however, read a program based on it's execution *flow*, not necessarily from top to bottom.\n",
+    "* Python executes code from top to bottom; however, read a program based on it's execution *flow*, not necessarily from top to bottom.\n",
     "* Function definitions do not alter the flow of program execution.\n",
     "    * When Python encounters a function definition, it notes the existence of the function, but does not execute the function\n",
     "* Statements in a function definition are not executed until the function is *called*. \n",
