--- a/progassignments/PA2.ipynb
+++ b/progassignments/PA2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "[Gina Sprint](http://eecs.wsu.edu/~gsprint/)\n",
     "## PA2 Functions (60 pts)\n",
-    "Due Monday, September 26 at Midnight.\n",
+    "<mark>Due Monday, September 26 at Midnight.</mark>\n",
     "\n",
     "### Learner Objectives\n",
     "At the conclusion of this programming assignment, participants should be able to:\n",
@@ -212,7 +212,7 @@
    "metadata": {},
    "source": [
     "#### Bonus (5 pts)\n",
-    "[`matplotlib`](http://matplotlib.org/index.html) is a Python module that produces beautiful publication-quality visualizations. To use `matplotlib`, we simply need to import it: `import matplotlib`. I've written a function, `plot_city_distances()` that accepts 12 arguments, 6 strings representing the cities entered by the user and 6 distances between the cities and Pullman:"
+    "[`matplotlib`](http://matplotlib.org/index.html) is a Python library that produces beautiful publication-quality visualizations. To use `matplotlib`, we simply need to import it: `import matplotlib`. I've written a function, `plot_city_distances()` that accepts 12 arguments, 6 strings representing the cities entered by the user and 6 distances between the cities and Pullman:"
    ]
   },
   {
@@ -277,7 +277,7 @@
     "### Grading Guidelines\n",
     "This assignment is worth 60 points + 5 points bonus. Your assignment will be evaluated based on a successful compilation and adherence to the program requirements. We will grade according to the following criteria:\n",
     "* 10 pts for correct `display_instructions()`\n",
-    "* 15 pts for correct `get_city_string()`\n",
+    "* 10 pts for correct `get_city_string()`\n",
     "* 10 pts for correct `meters_to_miles()`\n",
     "* 15 pts for correct `display_city_distance()`\n",
     "* 10 pts for correct `main()` function that drives the program.\n",
@@ -287,9 +287,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -301,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
