--- a/lessons/L4-2.ipynb
+++ b/lessons/L4-2.ipynb
@@ -73,19 +73,18 @@
     "Variables declared outside of a function are considered *global*. In general, global variables are a [bad idea](http://c2.com/cgi/wiki?GlobalVariablesAreBad) and we try to avoid using them.\n",
     "\n",
     "### Local Variables\n",
-    "Parameter variables and variables declared within a function are considered *local*. Local variables are only visible from within that function; once function is done, variables go away (space is deallocated)."
+    "Parameter variables and variables declared within a function are considered *local*. Local variables are only visible from within that function; once function is done, variables go away (space is deallocated). Consider the following example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "max_val = 950\n",
-    "limit = 200\n",
     "\n",
     "def one(anarg, second):\n",
     "    '''\n",
@@ -105,17 +104,22 @@
     "    '''\n",
     "    local_var = 0\n",
     "    \n",
-    "main()"
+    "one(0, 1)\n",
+    "fun_two(5, 10)\n",
+    "main()\n",
+    "limit = 200"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When each of the above functions is executed, what is the scope of the following identifiers?\n",
+    "\n",
     "|Name|visible in `one()`|visible in `fun_two()`|visible in `main()`|\n",
     "|----|------------------|----------------------|-------------------|\n",
     "|`max_val`|y|y|y|\n",
-    "|`limit`|y|y|y|\n",
+    "|`limit`|n|n|n|\n",
     "|`main`|y|y|y|\n",
     "|`local_var` (local variable in `main()`)|n|n|y|\n",
     "|`one` (function)|y|n|y|\n",
