--- a/progassignments/PA1.ipynb
+++ b/progassignments/PA1.ipynb
@@ -9,17 +9,17 @@
     "\n",
     "[Gina Sprint](http://eecs.wsu.edu/~gsprint/)\n",
     "## PA1 Arithmetic (50 pts)\n",
-    "Due Monday, September 12 at Midnight.\n",
+    "<mark>Due Monday, September 12 at Midnight.</mark>\n",
     "\n",
     "### Learner Objectives\n",
     "At the conclusion of this programming assignment, participants should be able to:\n",
-    "* Use variables, `print` statements, and collect input from the user with `input()`\n",
+    "* Use variables, `print()` statements, and collect input from the user with `input()`\n",
     "* Convert values from one type to another (type casting)\n",
     "* Apply basic arithmetic\n",
     "\n",
     "### Prerequisites\n",
     "Before starting this programming assignment, participants should be able to:\n",
-    "* Run Python in interactive and script mode."
+    "* Run Python in interactive and script mode"
    ]
   },
   {
@@ -123,10 +123,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -138,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
