--- a/progassignments/PA2.ipynb
+++ b/progassignments/PA2.ipynb
@@ -160,7 +160,7 @@
     "For this program, define the following functions:\n",
     "1. `display_instructions()`: Accepts no arguments. Prints instructions describing the use of the program to the user.\n",
     "1. `get_city_string(pair_num, city_ordering)`: Accepts 2 arguments: `pair_num` an integer representing the pair number [1-3] and `city_ordering` a string representing whether this is the \"first\" or \"second\" city of the pair. Prompts the user to enter the city. Use `pair_num` and `city_ordering` to provide the user with information regarding the progress of entering city names. Returns a string representing the city.\n",
-    "1. `meters_to_miles()`: Accepts 1 argument: `meters` an integer representing the distance in meters. Converts `meters` to miles and returns the result as a floating point number.\n",
+    "1. `meters_to_miles(meters)`: Accepts 1 argument: `meters` an integer representing the distance in meters. Converts `meters` to miles and returns the result as a floating point number.\n",
     "1. `display_city_distance(city1, city2, distance)`: Accepts 3 arguments: `city1` a string representing the first city of a pair, `city2` a string representing the second city of a pair, and `distance` an integer representing the distance in meters. Calls `meters_to_miles()` to convert `distance` from meters to miles and displays the result.\n",
     "1. `main()` function that drives the program.\n",
     "\n",
