--- a/Syllabus.ipynb
+++ b/Syllabus.ipynb
@@ -118,8 +118,8 @@
     "\n",
     "### Textbooks\n",
     "#### Required Textbook\n",
-    "Programming in Python 3 (a [zyBooks](https://zybooks.com) book). This is an online interactive textbook. Follow these instructions to gain access to the book:\n",
-    "1. Sign up at [zyBooks.com](https://zybooks.com)\n",
+    "Programming in Python 3 (a [zyBooks](https://zybooks.zyante.com) book). This is an online interactive textbook. Follow these instructions to gain access to the book:\n",
+    "1. Sign up at [zybooks.zyante.com](https://zybooks.zyante.com)\n",
     "1. Enter zyBook code WSUCptS111SprintSpring2017\n",
     "1. Click Subscribe\n",
     "\n",
@@ -184,7 +184,9 @@
     "* *Section 01*: Monday, May 1st; 8:00 – 10:00am\n",
     "* *Section 03*: Tuesday, May 2nd; 3:10 – 5:10pm\n",
     "\n",
-    "Exams may be rescheduled for students that have valid excuses. To increase your chances of your excuse being determined \"valid\", notify the instructor no less than two days in advance if you are going to miss an exam.\n",
+    "Exams may be rescheduled for students that have valid excuses. To increase your chances of your excuse being determined \"valid\", notify the instructor no less than two days in advance if you are going to miss an exam\n",
+    "\n",
+    "Note: As per [university policy](https://registrar.wsu.edu/media/756534/spring-2017-final-exam.pdf), final exams may not be taken early. You must take your final exam at the time listed above for the course section you are enrolled in.\n",
     "\n",
     "#### zyBooks Textbook Activities\n",
     "You will be graded for completing participation and challenge activities in the zyBooks textbook. Completing at least 90% of the activities constitutes full credit for the assigned zyBooks chapters. See the [course schedule](http://eecs.wsu.edu/~gsprint/cpts111/schedule.html) for the schedule of assigned zyBooks chapters and due dates.\n",
