--- a/lessons/L1-1.ipynb
+++ b/lessons/L1-1.ipynb
@@ -37,7 +37,13 @@
    "metadata": {},
    "source": [
     "##### <mark>1. What are areas of study in Computer Science?</mark>\n",
-    ">"
+    "> * Data analytics \n",
+    "* AI / ML\n",
+    "* Systems\n",
+    "* Video game design\n",
+    "* Web design\n",
+    "* Software engineering\n",
+    "* Forensics"
    ]
   },
   {
@@ -51,12 +57,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,12 +93,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CptS 111 is AWESOME!!!!!!!!!!!!!!!!!!!!!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"CptS 111 is AWESOME!!!!!!!!!!!!!!!!!!!!!!!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,12 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "temperature = 33"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,12 +137,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 + 50"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,12 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "if temperature > 50:\n",
+    "    print(\"It is warm out\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,12 +185,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "while x < 10:\n",
+    "    print(x)\n",
+    "    x = x + 1"
+   ]
   },
   {
    "cell_type": "markdown",
