--- a/lessons/L1-2.ipynb
+++ b/lessons/L1-2.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -99,13 +99,13 @@
       "Please enter the radius of a cone\n",
       "5\n",
       "Please enter the height of a cone\n",
-      "10.2\n",
-      "The volume of a cone with radius 5.00 and height 10.20 is 266.90\n"
+      "10\n",
+      "The volume of a cone with radius 5.00 and height 10.00 is 261.67\n"
      ]
     }
    ],
    "source": [
-    "# get radius from user\n",
+    "# get radius from userasdjf;lksadjgf;lkdsagalskjfd\n",
     "print(\"Please enter the radius of a cone\")\n",
     "radius = float(input())\n",
     "\n",
@@ -135,12 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# a useful statement to describe the code"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +158,15 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "this is a multi line\n",
+    "comment block\n",
+    "it spans multiple lines\n",
+    "'''\n",
+    "\n",
+    "\"\"\"triple double quote\"\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,12 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "height = float(input())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,12 +241,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "print(type(x))\n",
+    "x = 5.0\n",
+    "print(type(x))\n",
+    "my_str = \"hello\"\n",
+    "print(type(my_str))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,7 +280,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "volume = 1 / 3 * 3.14 * radius ** 2 * height"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -280,12 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 5 # declare a new variable, x, and assign it the integer 5\n",
+    "y = x # declare a new variable, y, and assign it the value of x (which is 5)\n",
+    "y = -x # compute the negation of x (-5) and assign it to y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,12 +340,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "print(x)\n",
+    "x = x + 1\n",
+    "print(x)\n",
+    "x += 3\n",
+    "print(x)\n",
+    "x -= 3\n",
+    "print(x)\n",
+    "x *= 5\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,12 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The volume of a cone with radius 5.00 and height 10.00 is 261.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The volume of a cone with radius %.2f and height %.2f is %.2f\" %(radius, height, volume))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -348,12 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard spacing\n",
+      "Adding extra space with the newline character\n",
+      "\n",
+      "**Next line**\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Standard spacing\")\n",
+    "print(\"Adding extra space with the newline character\\n\")\n",
+    "print(\"**Next line**\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,12 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = float(input())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -388,12 +489,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function print in module builtins:\n",
+      "\n",
+      "print(...)\n",
+      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+      "    \n",
+      "    Prints the values to a stream, or to sys.stdout by default.\n",
+      "    Optional keyword arguments:\n",
+      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+      "    sep:   string inserted between values, default a space.\n",
+      "    end:   string appended after the last value, default a newline.\n",
+      "    flush: whether to forcibly flush the stream.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(print)"
+   ]
   },
   {
    "cell_type": "markdown",
