--- a/lessons/L3-1.ipynb
+++ b/lessons/L3-1.ipynb
@@ -55,56 +55,18 @@
     "In pairs, work on the following problems. Each student needs to turn in their own paper to get credit for MA3.\n",
     "\n",
     "1. Label each of the following as either \"Python reserved keyword\", \"standard identifier\", or \"other valid identifier\":\n",
-    "    1. `int`\n",
-    "    1. `PI`\n",
-    "    1. `if`\n",
-    "    1. `main`\n",
-    "    1. `while`\n",
-    "    1. `high_score` \n",
-    "1. How should you read the statement: `temp_value = old_value + new_value`?\n",
+    "    1. `int`: standard\n",
+    "    1. `PI`: other\n",
+    "    1. `if`: reserved keyword\n",
+    "    1. `main`: other\n",
+    "    1. `while`: reserved keyword\n",
+    "    1. `high_score`: other\n",
+    "1. How should you read the statement: `temp_value = old_value + new_value`? \"temp_value **is assigned** old_value plus new_value\"\n",
     "1. Which Python data type would be best to represent the following? For each blank, you may list `int`, `float`, or `str` only.\n",
-    "    1. Gender\n",
-    "    1. Average of 10 numbers\n",
-    "    1. Number of students in CptS111\n",
-    "    1. Price of a gallon of milk\n",
-    "1. Rank the order of precedence for the following C operators (1 is the highest precedence, 5 is the lowest precedence):\n",
-    "    1. `+ # binary addition `\n",
-    "    1. `- # unary minus (e.g. negation)`\n",
-    "    1. `% # modulus`\n",
-    "    1. `= # assignment`\n",
-    "    1. `() # parentheses `\n",
-    "1. Evaluate each of the following equations and *determine the resultant data type*:\n",
-    "    1. `4 / 12 =`\n",
-    "    1. `4 // 12 =`\n",
-    "    1. `4 % 12 =`\n",
-    "    1. `7 // 4 =`\n",
-    "    1. `9.0 / 4.0 =`\n",
-    "    1. `3 / 0 = `\n",
-    "    1. `3.0 % 1 =`\n",
-    "    1. `16 % 0 = `\n",
-    "    1. `3 % 5 = `\n",
-    "    1. `9 % 5 = `\n",
-    "    1. `2 * 4 ** 2 =`\n",
-    "    1. `2 ** 4 ** (2 / 4) = `\n",
-    "1. Given `y = m % n`, what are the possible values of `y`?\n",
-    "1. Write the following equation as a Python arithmetic statement: \n",
-    "$$q=\\frac{kA(T_1-T_2)}{L}$$\n",
-    "1. Show the output displayed by the following program when the data entered are 12 for `m` and 0 for `n`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "m = int(input(\"Enter an integer> \"))\n",
-    "n = int(input(\"Enter an integer> \"))\n",
-    "m = m + 5\n",
-    "n = 3 * n\n",
-    "print(\"m = %d\\nn = %d\\n\" %(m, n))"
+    "    1. Gender: `str`\n",
+    "    1. Average of 10 numbers: `float`\n",
+    "    1. Number of students in CptS111: `int`\n",
+    "    1. Price of a gallon of milk: `float`"
    ]
   },
   {
