--- a/lessons/L3-2.ipynb
+++ b/lessons/L3-2.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -103,13 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "3.1416\n"
+     ]
+    }
+   ],
    "source": [
-    "print(math.pi)"
+    "print(math.pi)\n",
+    "print(\"%.4f\" %(math.pi))"
    ]
   },
   {
@@ -121,11 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function sqrt in module math:\n",
+      "\n",
+      "sqrt(...)\n",
+      "    sqrt(x)\n",
+      "    \n",
+      "    Return the square root of x.\n",
+      "\n",
+      "None\n",
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# don't forget the help() command to learn more about a function\n",
     "print(help(math.sqrt))\n",
@@ -156,11 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Absolute value of -5: 5\n",
+      "45 degrees in radians is 0.79\n",
+      "The sine of 45 degrees is 0.71\n"
+     ]
+    }
+   ],
    "source": [
     "x = -5\n",
     "print(\"Absolute value of %d: %d\" %(x, math.fabs(x)))\n",
@@ -197,25 +233,6 @@
    "metadata": {},
    "source": [
     "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/lessons/figures/turtle_simple.png\" width=450</img>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## An Aside: In-class Group Work\n",
-    "Teaching by telling and learning by listening is not an effective teaching/learning model for *most* students. Consequently, CptS 111 is an active learning class. This means, I am going to lecture as little as possible! Instead, in class, we will often be learning new concepts and applying skills in groups of 3 students such that **every group has at least one student with a laptop.** Each member of the group is going to have a specific role:\n",
-    "1. Manager: Manages the group.\n",
-    "    * Ensures that members are fulfilling their role, the assigned tasks are being accomplished on time, and all members of the group are participating in the activities.\n",
-    "    * Reads the task descriptions to the group.\n",
-    "1. Technician: Performs computations.\n",
-    "    * Has a laptop with the Spyder IDE open, types/executes Python code, and reports/explains the results to all members of the group.\n",
-    "    * Checks results.\n",
-    "1. Recorder: Records and presents information.\n",
-    "    * Records the names and roles of the group members, the important aspects of the group discussions/observations/insights/etc for group notes (perhaps in an email) and micro assignments.\n",
-    "    * Presents oral reports to the class for the group.\n",
-    "    \n",
-    "Each location in the lesson that requires the group to provide information (e.g. answer a problem, record results) will be <mark>highlighted in yellow</mark>."
    ]
   },
   {
