--- a/labs/Lab2.ipynb
+++ b/labs/Lab2.ipynb
@@ -108,7 +108,7 @@
     "(Adapted from problem 3.8, Zelle 2010) The Gregorian epact is the number of days between January 1st and the previous new moon. This value is used to figure out the date of Easter. It is calculated by these formulas:\n",
     "\n",
     "$$C = year // 100$$\n",
-    "$$epact = (8 + (C // 4) - C + ((8C + 13) // 25) + 11(year \\% 19))) \\% 30$$\n",
+    "$$epact = (8 + (C // 4) - C + ((8C + 13) // 25) + 11(year \\% 19)) \\% 30$$\n",
     "\n",
     "Write a program that prompts the user for a 4-digit year and then outputs the value of the epact. You can check your work by looking up year/epact pairs in the Gregorian calendar table [here](https://en.wikipedia.org/wiki/Computus).\n",
     "\n",
