--- a/lessons/L3-2.ipynb
+++ b/lessons/L3-2.ipynb
@@ -85,13 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import math # math is a module containing... math variables and functions!"
+    "import math"
    ]
   },
   {
@@ -103,20 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.141592653589793\n",
-      "3.1416\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(math.pi)\n",
     "print(\"%.4f\" %(math.pi))"
@@ -131,32 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function sqrt in module math:\n",
-      "\n",
-      "sqrt(...)\n",
-      "    sqrt(x)\n",
-      "    \n",
-      "    Return the square root of x.\n",
-      "\n",
-      "None\n",
-      "2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# don't forget the help() command to learn more about a function\n",
     "print(help(math.sqrt))\n",
-    "\n",
-    "print(math.sqrt(4))"
+    "print(math.sqrt(9))"
    ]
   },
   {
@@ -182,29 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Absolute value of -5: 5\n",
-      "45 degrees in radians is 0.79\n",
-      "The sine of 45 degrees is 0.71\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = -5\n",
-    "print(\"Absolute value of %d: %d\" %(x, math.fabs(x)))\n",
+    "print(\"x: %d absolute value of x: %d\" %(x, math.fabs(x)))\n",
     "\n",
-    "degrees = 45\n",
-    "rads = degrees * (math.pi / 180.0)\n",
-    "print(\"%d degrees in radians is %.2f\" %(degrees, rads))\n",
-    "print(\"The sine of %d degrees is %.2f\" %(degrees, math.sin(rads)))"
+    "degrees = 90\n",
+    "radians = degrees * (math.pi / 180)\n",
+    "print(\"sin(%d): %.2f\" %(degrees, math.sin(radians)))"
    ]
   },
   {
@@ -276,12 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the purchase price: 9.00\n",
+      "Please enter the sales tax as a percent (%): 7.8\n",
+      "Total purchase price after tax: $9.70\n"
+     ]
+    }
+   ],
+   "source": [
+    "purchase = float(input(\"Please enter the purchase price: \"))\n",
+    "tax_percent = float(input(\"Please enter the sales tax as a percent (%): \"))\n",
+    "\n",
+    "tax = purchase * (tax_percent / 100.0)\n",
+    "purchase += tax\n",
+    "\n",
+    "print(\"Total purchase price after tax: $%.2f\" %(purchase))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,7 +284,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -328,62 +308,10 @@
     "Example output:\n",
     "\n",
     "```\n",
-    "Please enter an m value: 4\n",
-    "Please enter an n value: 2\n",
+    "Please enter a m value: 4\n",
+    "Please enter a n value: 2\n",
     "Pythagorean triple: 12^2 + 16^2 = 20^2\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# check the result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Problem #4 Average of 3 GPAs\n",
-    "Note: This problem serves as an example of redundant code. This problem motivates the benefits of defining and using functions, which we will cover next class!\n",
-    "\n",
-    "Problem Statement: Write a program that computes your grade point average after completion of 3 courses.\n",
-    "\n",
-    "Inputs:\n",
-    "* Grade point and number of credits for course 1\n",
-    "* Grade point and number of credits for course 2\n",
-    "* Grade point and number of credits for course 3\n",
-    "\n",
-    "Outputs\n",
-    "* Grade point average (GPA)\n",
-    "Relevant formula: `GPA = ((grade_point1 * num_credits1) + (grade_point2 * num_credits2) + (grade_point3 * num_credits3)) / total_num_credits`\n",
-    "\n",
-    "### Algorithm\n",
-    "1. Get the grade points earned from each class\n",
-    "1. Get the credit hours for each class\n",
-    "1. Compute the credits hours earned\n",
-    "    * `weighted_credits = (grade_point1 * num_credits1) + (grade_point2 * num_credits2) + (grade_point3 * num_credits3)`\n",
-    "1. Compute the total number of credits\n",
-    "    * `total_num_credits = num_credits1 + num_credits2 + num_credits3`\n",
-    "1. Compute the average of the grade points\n",
-    "    * `gpa = weighted_credits / total_num_credits`\n",
-    "1. Display the results  \n",
-    "\n",
-    "Implementation:"
    ]
   },
   {
@@ -393,41 +321,17 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "# get grade point and credit hours for each class\n",
-    "print(\"Please enter the gpa for your computer science course: \")\n",
-    "gpa1 = float(input())\n",
-    "print(\"Please enter number of credits for your computer science course: \")\n",
-    "num_credits1 = int(input())\n",
-    "\n",
-    "print(\"Please enter the gpa for your math course: \")\n",
-    "gpa2 = float(input())\n",
-    "print(\"Please enter number of credits for your math course: \")\n",
-    "num_credits2 = int(input())\n",
-    "\n",
-    "print(\"Please enter the gpa for your karate course: \")\n",
-    "gpa3 = float(input())\n",
-    "print(\"Please enter number of credits for your karate course: \")\n",
-    "num_credits3 = int(input())\n",
-    "\n",
-    "# compute the weighted credit hours earned\n",
-    "weighted_credits = (num_credits1 * gpa1) + (num_credits2 * gpa2) + (num_credits3 * gpa3)\n",
-    "\n",
-    "# compute the total number of credits earned\n",
-    "total_num_credits = num_credits1 + num_credits2 + num_credits3\n",
-    "\n",
-    "# copute the average of the grade points\n",
-    "gpa = weighted_credits / total_num_credits\n",
-    "\n",
-    "# display the results to the user\n",
-    "print(\"Your GPA is: %.2f\" %(gpa))"
-   ]
+   "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
-    "What do you think of this example? It seems redundant, right? We're using the exact same sequence of commands (`print()` and `input()`) to obtain the three grade points and credits. Is there a better (less redundant, easier to read, more concise) way to approach this problem? Enter: Functions!!"
+    "# check result"
    ]
   },
   {
