--- a/lessons/L3-2.ipynb
+++ b/lessons/L3-2.ipynb
@@ -282,12 +282,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MILEAGE REIMBURSEMENT CALCULATOR\n",
+      "Please enter the beginning odometer reading: 13505.2\n",
+      "Please enter the ending odometer reading: 13810.6\n",
+      "You traveled 305.4 miles. At $0.35 per mile, your reimbursement is $106.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MILEAGE REIMBURSEMENT CALCULATOR\")\n",
+    "odo_begin = float(input(\"Please enter the beginning odometer reading: \"))\n",
+    "odo_end = float(input(\"Please enter the ending odometer reading: \"))\n",
+    "\n",
+    "dist_traveled = odo_end - odo_begin\n",
+    "reimbursement = dist_traveled * .35\n",
+    "print(\"You traveled %.1f miles. At $0.35 per mile, your reimbursement is $%.2f\" %(dist_traveled, reimbursement))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,22 +335,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter an m value: 4\n",
+      "Please enter an n value: 2\n",
+      "Pythagorean triple: 12^2 + 16^2 = 20^2\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = int(input(\"Please enter an m value: \"))\n",
+    "n = int(input(\"Please enter an n value: \"))\n",
+    "\n",
+    "side1 = m ** 2 - n ** 2\n",
+    "side2 = 2 * m * n\n",
+    "hypotenuse = m ** 2 + n ** 2\n",
+    "\n",
+    "print(\"Pythagorean triple: %d^2 + %d^2 = %d^2\" %(side1, side2, hypotenuse))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400\n",
+      "400\n"
+     ]
+    }
+   ],
    "source": [
-    "# check result"
+    "# check the output\n",
+    "print(12 * 12 + 16 * 16)\n",
+    "print(20 * 20)"
    ]
   },
   {
