--- a/lessons/L4-1.ipynb
+++ b/lessons/L4-1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -58,16 +58,16 @@
       "Please enter the grade point for your computer science course: \n",
       "4.0\n",
       "Please enter number of credits for your computer science course: \n",
-      "4\n",
+      "3\n",
       "Please enter the grade point for your math course: \n",
       "3.5\n",
       "Please enter number of credits for your math course: \n",
-      "3\n",
-      "Please enter the grade point for your karate course: \n",
-      "2.7\n",
-      "Please enter number of credits for your karate course: \n",
       "2\n",
-      "Your GPA is: 3.54\n"
+      "Please enter the grade point for your karate course: \n",
+      "4.0\n",
+      "Please enter number of credits for your karate course: \n",
+      "1\n",
+      "Your GPA is: 3.83\n"
      ]
     }
    ],
@@ -135,17 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "# type() is a function that accepts an argument and returns the data type of the argument\n",
     "# type is the function name\n",
     "# 42 is the argument\n",
     "# data_type stores the return value from type\n",
-    "data_type = type(42)"
+    "data_type = type(42)\n",
+    "print(data_type)"
    ]
   },
   {
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -245,12 +254,12 @@
       "Please enter the grade point for math: \n",
       "3.5\n",
       "Please enter number of credits for your math course: \n",
-      "3\n",
-      "Please enter the grade point for karate: \n",
-      "2.0\n",
-      "Please enter number of credits for your karate course: \n",
       "2\n",
-      "Your GPA is: 3.31\n"
+      "Please enter the grade point for karate: \n",
+      "4.0\n",
+      "Please enter number of credits for your karate course: \n",
+      "1\n",
+      "Your GPA is: 3.83\n"
      ]
     }
    ],
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -341,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -355,14 +364,14 @@
       "Please enter the number of credits for computer science: \n",
       "3\n",
       "Please enter the grade point for math: \n",
-      "3.0\n",
+      "3.5\n",
       "Please enter the number of credits for math: \n",
-      "3\n",
-      "Please enter the grade point for karate: \n",
-      "2.0\n",
-      "Please enter the number of credits for karate: \n",
       "2\n",
-      "Your GPA is: 3.12\n"
+      "Please enter the grade point for karate: \n",
+      "4.0\n",
+      "Please enter the number of credits for karate: \n",
+      "1\n",
+      "Your GPA is: 3.83\n"
      ]
     }
    ],
