--- a/progassignments/PA2.ipynb
+++ b/progassignments/PA2.ipynb
@@ -203,7 +203,8 @@
    "metadata": {},
    "source": [
     "Copy and paste the above code into your night_out.py file. **Do not modify the function `plot_money_spent()`.** Call `plot_money_spent()` passing in the activity label strings and money spent for each activity. The function will show a window that looks like the following:\n",
-    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/matplotlib_money_spent.png\" width=400>\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/gsprint23/cpts111/master/progassignments/figures/matplotlib_money_spent.png\" width=400/>\n",
     "\n",
     "Save the plot as a .png image file by clicking on the save icon in the toolbar (highlighted in the screen shot above). Turn in your saved money spent plot image file in with your night_out.py file in your zip file."
    ]
